testsuite/tests/linear/should_fail/LinearAsPat.stderr

LinearAsPat.hs:6:12: error:
    • Couldn't match type ‘'Many’ with ‘'One’
        arising from a non-linear pattern
    • In an equation for ‘shouldFail’: shouldFail x@True = x
